--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect=0.0.0.0:9235' next dev",
+    "dev": "cross-env next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -84,6 +84,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@types/bcrypt": "^6.0.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^24",
     "@types/react": "19.2.4",
