--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.553.0",
     "mime-types": "^3.0.1",
     "next": ">=16.0.7",
